trabalhando com model

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -12,3 +12,8 @@ title=App to manege Sales Order
 #Criando a chave para tradução
 Calculator=Calculator
 customerOrder=Customer Order
+
+customName= Customer Name
+exMessage=Show Message
+#{0} é para deefinir quantos parametros ele espera pode ser add mais de uma {0} {1} {2}
+WelcomeMsg=Welcome {0} 
