--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,7 +12,6 @@ title=App para gerenciar ordem de vendas
 #Criando a chave para tradução
 Calculator=Calculadora
 customerOrder=Ordem De Vendas
-
 customName= Nome do Cliente
-exMessage=Exibir mensagem
+exMesage=Exibir mensagem
 WelcomeMsg=Bem Vindo {0} 
